# llamacloud-mcp

./: .env.example  .gitignore  README.md  claude_desktop_config.json  mcp-client.py  mcp-http-server.py  mcp-server.py  pyproject.toml
docs/: blog.md
docs/adrs/: 0000-adr-template.md  0001-llamacloud-mcp-server.md  0002-mcp-client-implementation.md  0003-transport-protocol-selection.md  0004-build-and-validation.md  0005-mcp-server-prompt-engineering.md  README.md
scripts/: build_macos.sh  build_rhel.sh  build_ubuntu.sh  build_windows.ps1  validate.py
